fixed navbar breaking on mobile site

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -208,6 +208,7 @@ nav {
   width: 100%;
   color: #064926;
   white-space: nowrap;
+  margin-top: -61px;
 }
 
 nav ul {
@@ -776,6 +777,7 @@ textarea {
   .cards,
   .home-grid .cards {
     grid-template-columns: 1fr;
+
   }
 
   .sidebar {
@@ -797,6 +799,10 @@ textarea {
 
   nav a {
     padding: 1.2em 1.5em 0.5em;
+  }
+
+  nav {
+    margin-top: -56px;
   }
 }
 
@@ -857,8 +863,4 @@ h6 a {
   color: inherit;
   text-decoration: none;
   font: inherit;
-}
-
-nav {
-  margin-top: -60px;
 }
